<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/events_layout_margin"
    android:background="@drawable/work_back_shape">

    <TextView
        android:id="@+id/eventTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small_title_margin"
        android:layout_marginStart="@dimen/small_title_margin"
        android:background="@color/transparent_black"
        android:ellipsize="end"
        android:fontFamily="@font/dosis_regular"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:minLines="2"
        android:padding="@dimen/small_title_padding"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/small_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rijksmuseum Escapegame (the secret formula)" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/width_zero"
        android:layout_height="@dimen/icon_height_24"
        android:layout_marginStart="@dimen/padding_margin_sixteen"
        android:layout_marginTop="@dimen/padding_margin_sixteen"
        android:contentDescription="@string/cnt_desc_calendar_icon"
        app:layout_constraintEnd_toStartOf="@id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleTv"
        app:srcCompat="@drawable/ic_note" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/width_zero"
        android:layout_height="@dimen/icon_height_24"
        android:layout_marginEnd="@dimen/padding_margin_sixteen"
        android:contentDescription="@string/cnt_desc_clock_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_history_button" />

    <TextView
        android:id="@+id/eventDateTv"
        android:layout_width="@dimen/width_zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_sixteen"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@id/eventHourTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="2018-05-31" />

    <TextView
        android:id="@+id/eventHourTv"
        android:layout_width="@dimen/width_zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_margin_eight"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eventDateTv"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/eventDateTv"
        tools:text="10:30 - 11:30" />

    <View
        android:id="@+id/blackHorizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_one"
        android:layout_marginTop="@dimen/padding_margin_sixteen"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDateTv" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackHorizontalDivider">

        <TextView
            android:id="@+id/eventDescriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:ellipsize="end"
            android:maxLines="9"
            android:minLines="9"
            android:padding="@dimen/padding_margin_sixteen"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/body_text_size"
            tools:text="In this Escape Game, you’ll experience the Rijksmuseum together in a unique way. The game can be played at two levels: together with friends, or with children ages 6 and up. Together with 2 to 5 people, you jump into the game and get to work as an investigator. A thrilling adventure for everyone, but only a few will reach the finish line. Will you succeed? Book quickly: the game can be played this summer only!" />

        <Button
            android:id="@+id/learnMoreButton"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/eventDescriptionTv"
            android:layout_margin="@dimen/padding_margin_sixteen"
            android:text="@string/learn_more_label"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>